[gd_scene load_steps=2 format=3 uid="uid://cmh5xy8r4pwbj"]

[ext_resource type="Script" path="res://Scenes/UI/PlayerSelectionCard.gd" id="1_card"]

[node name="PlayerSelectionCard" type="PanelContainer"]
custom_minimum_size = Vector2(280, 450)
script = ExtResource("1_card")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 15

[node name="PlayerNameLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Player Name"
horizontal_alignment = 1

[node name="PlaneViewport" type="SubViewportContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(250, 250)
layout_mode = 2
size_flags_horizontal = 4
stretch = true

[node name="SubViewport" type="SubViewport" parent="VBoxContainer/PlaneViewport"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(250, 250)
render_target_update_mode = 4

[node name="Camera2D" type="Camera2D" parent="VBoxContainer/PlaneViewport/SubViewport"]
position = Vector2(125, 125)

[node name="PlaneSprite" type="Sprite2D" parent="VBoxContainer/PlaneViewport/SubViewport"]
position = Vector2(125, 125)
scale = Vector2(3, 3)

[node name="PlaneNameLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Plane #0"
horizontal_alignment = 1

[node name="ControlsContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="PrevButton" type="Button" parent="VBoxContainer/ControlsContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "◄"

[node name="Spacer" type="Control" parent="VBoxContainer/ControlsContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2

[node name="NextButton" type="Button" parent="VBoxContainer/ControlsContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "►"

[node name="ReadyIndicator" type="Label" parent="VBoxContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_font_sizes/font_size = 20
text = "✓ READY"
horizontal_alignment = 1

[connection signal="pressed" from="VBoxContainer/ControlsContainer/PrevButton" to="." method="_on_prev_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ControlsContainer/NextButton" to="." method="_on_next_button_pressed"]
